WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139370
[GStreamer] Major cleanups of AudioDestination implementation
https://bugs.webkit.org/show_bug.cgi?id=139370
Summary
[GStreamer] Major cleanups of AudioDestination implementation
Sebastian Dröge (slomo)
Reported
2014-12-07 10:28:52 PST
Patch coming in a second.
Attachments
Patch
(15.72 KB, patch)
2014-12-07 10:30 PST
,
Sebastian Dröge (slomo)
no flags
Details
Formatted Diff
Diff
Patch
(15.70 KB, patch)
2014-12-07 10:39 PST
,
Sebastian Dröge (slomo)
no flags
Details
Formatted Diff
Diff
Patch
(16.22 KB, patch)
2014-12-07 11:52 PST
,
Sebastian Dröge (slomo)
pnormand
: review+
Details
Formatted Diff
Diff
Patch
(16.22 KB, patch)
2014-12-07 13:17 PST
,
Sebastian Dröge (slomo)
no flags
Details
Formatted Diff
Diff
Patch
(16.24 KB, patch)
2014-12-08 00:54 PST
,
Sebastian Dröge (slomo)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Sebastian Dröge (slomo)
Comment 1
2014-12-07 10:30:18 PST
Created
attachment 242753
[details]
Patch
WebKit Commit Bot
Comment 2
2014-12-07 10:32:38 PST
Attachment 242753
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:83: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sebastian Dröge (slomo)
Comment 3
2014-12-07 10:33:55 PST
This style error was there before, what do you suggest for fixing this? It's not clear to me what the style guide recommends for cases like this.
Sebastian Dröge (slomo)
Comment 4
2014-12-07 10:39:24 PST
Created
attachment 242756
[details]
Patch
Sebastian Dröge (slomo)
Comment 5
2014-12-07 11:52:59 PST
Created
attachment 242763
[details]
Patch
Sebastian Dröge (slomo)
Comment 6
2014-12-07 13:17:29 PST
Created
attachment 242767
[details]
Patch
Philippe Normand
Comment 7
2014-12-08 00:31:59 PST
Comment on
attachment 242763
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=242763&action=review
> Source/WebCore/platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:66 > + guint64 numSamples;
We usually try to avoid abbreviations in variable names. I don't have many suggestions, I'm bad at naming stuff :)
Sebastian Dröge (slomo)
Comment 8
2014-12-08 00:50:49 PST
I could call it numberOfSamples if you prefer that :) Should I change it or is it ok like that?
Sebastian Dröge (slomo)
Comment 9
2014-12-08 00:54:42 PST
Created
attachment 242789
[details]
Patch
WebKit Commit Bot
Comment 10
2014-12-08 01:33:52 PST
Comment on
attachment 242789
[details]
Patch Clearing flags on attachment: 242789 Committed
r176943
: <
http://trac.webkit.org/changeset/176943
>
WebKit Commit Bot
Comment 11
2014-12-08 01:33:55 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug